project.log
2021-04-27 02:10:20,168 - loggingerror - ERROR - must be str, not int
Traceback (most recent call last):
  File "E:\pythonflaskapiexample\crudoperations.py", line 95, in selectdatabytypeandid
    sql = "select * from tabledata.songsdata where type='"+type+"' and id="+id
TypeError: must be str, not int
2021-04-27 02:26:29,329 - loggingerror - ERROR - syntax error at or near "id"
LINE 1: delete from tabledata.songsdata where type='ab' id=1
                                                        ^
Traceback (most recent call last):
  File "E:\pythonflaskapiexample\crudoperations.py", line 59, in deletefromtable
    cursor.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "id"
LINE 1: delete from tabledata.songsdata where type='ab' id=1
                                                        ^

2021-04-27 02:26:33,477 - loggingerror - ERROR - syntax error at or near "id"
LINE 1: delete from tabledata.songsdata where type='ab' id=1
                                                        ^
Traceback (most recent call last):
  File "E:\pythonflaskapiexample\crudoperations.py", line 59, in deletefromtable
    cursor.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "id"
LINE 1: delete from tabledata.songsdata where type='ab' id=1
                                                        ^

